--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: surveillance
 Title: Outbreak detection algorithms for surveillance data
-Version: 0.9-1
-Author: Höhle, Lang, Riebler
-Depends: xtable
+Version: 0.9-2
+Author: Höhle, Lang, Paul, Riebler
+Depends: utils,xtable,spc
 Description: A framework for the development and the evaluation
 	of outbreak detection algorithms in in routine collected public 
 	health surveillance data. Currently the package contains an 
@@ -14,4 +14,4 @@ Maintainer: Michael Höhle <hoehle@stat.uni-muenchen.de>
 License: GPL version 2 (http://www.gnu.org/licenses/gpl.html) 
 URL: http://www.stat.uni-muenchen.de/~hoehle/software/surveillance
 ZipData: no 
-Packaged: Mon Nov 21 11:08:18 2005; hoehle
+Packaged: Tue Sep  5 19:08:07 2006; hornik
