--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,14 @@
 Package: surveillance
 Title: Outbreak detection algorithms for surveillance data
-Version: 0.9-8
-Date: 2007-17-11
+Version: 0.9-9
+Date: 2008-21-01
 Author: M. Höhle with contributions from C. Lang, M. Paul, A. Riebler and V. Wimmer
 Depends: methods,utils,xtable,spc,sp,maptools,vcd,msm
 Suggests: RUnit,digest
 Description: A package implementing statistical methods for the surveillance of infectious diseases. This boils down to modelling and outbreak detection of univariate and multivariate time series of counts resulting from routinely collected public health surveillance data. Currently the package contains an implementation of the typically outbreak detection procedures such as Stroup et. al (1989), Farrington et. al (1996), Rossi et al (1999), Rogerson and Yamada (2001), a Bayesian approach and a detector based on generalized likelihood ratios (GLR). Furthermore, inference methods for the infectious disease model in Held et al (2005) are provided. The package contains several real-world datasets and the ability to simulate outbreak data.
 Maintainer: Michael Höhle <hoehle@stat.uni-muenchen.de> 
-License: GPL-2 (http://www.gnu.org/licenses/gpl.html) 
+License: GPL-2 
 URL: http://surveillance.r-forge.r-project.org/
 ZipData: no 
 Encoding: latin1
-Packaged: Thu Jan 17 22:39:32 2008; hoehle
+Packaged: Mon Jan 21 13:42:08 2008; hoehle
