--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,10 @@
 Package: surveillance
 Title: Modeling and monitoring discrete response time series
-Version: 1.1-6
-Date: 2010-05-21
+Version: 1.2-1
+Date: 2010-05-25
 Author: M. Höhle with contributions from T. Correa, M. Hofmann, C.
-        Lang, M. Paul, A. Riebler, S. Steiner and V. Wimmer
+        Lang, M. Paul, A. Riebler, S. Steiner, M. Virtanen and V.
+        Wimmer
 Depends: methods,utils,xtable,spc,sp,maptools,vcd,msm,Matrix
 Suggests: RUnit,digest,coda,gamlss,splancs
 Description: A package implementing statistical methods for the
@@ -30,6 +31,6 @@ License: GPL-2
 URL: http://surveillance.r-forge.r-project.org/
 ZipData: no
 Encoding: latin1
-Packaged: 2010-05-23 12:48:35 UTC; hoehle
+Packaged: 2010-06-09 14:52:39 UTC; hoehle
 Repository: CRAN
-Date/Publication: 2010-05-25 15:58:01
+Date/Publication: 2012-01-15 11:44:05
