--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,19 +1,20 @@
 Package: surveillance
 Title: Temporal and Spatio-Temporal Modeling and Monitoring of Epidemic
         Phenomena
-Version: 1.4-2
-Date: 2012-08-17
+Version: 1.5-0
+Date: 2012-12-12
 Author: M. Höhle, S. Meyer and M. Paul with contributions from T.
-        Correa, M.  Hofmann, C. Lang, A. Riebler, D. Sabanés Bové, S.
-        Steiner, M. Virtanen and V. Wimmer. A few code segments are
-        modified versions of code by The R Core Team (available under
-        GPL-2).
-Depends: R (>= 2.10.1), stats, methods, Rcpp, sp
-Imports: graphics, utils, MASS, colorspace, xtable, spc, msm, quadprog,
-        gpclib, spatstat (>= 1.17-0), intervals
+        Correa, L. Held, M. Hofmann, C. Lang, A. Riebler, D. Sabanés
+        Bové, S. Steiner, M. Virtanen, and V. Wimmer.  A few code
+        segments are modified versions of code by The R Core Team
+        (available under GPL-2).
+Depends: R (>= 2.10.1), grDevices, graphics, stats, utils, xtable,
+        methods, Rcpp, sp
+Imports: MASS, Matrix, spatstat (>= 1.17-0)
 LinkingTo: Rcpp
-Suggests: Matrix, mvtnorm, RUnit, digest, coda, gamlss, splancs,
-        statmod, animation, RColorBrewer, vcd, maptools, VGAM
+Suggests: msm, spc, colorspace, animation, quadprog, mvtnorm, statmod,
+        memoise, gpclib, maptools, intervals, spdep, numDeriv, maxLik,
+        RUnit, digest, coda, splancs, gamlss
 Description: A package implementing statistical methods for the
         modeling and change-point detection in time series of counts,
         proportions and categorical data, as well as for the modeling
@@ -48,6 +49,6 @@ License: GPL-2
 URL: http://surveillance.r-forge.r-project.org/
 ZipData: no
 Encoding: latin1
-Packaged: 2012-08-19 20:51:32 UTC; hoehle
+Packaged: 2012-12-11 08:45:47 UTC; hoehle
 Repository: CRAN
-Date/Publication: 2012-08-20 04:37:03
+Date/Publication: 2012-12-12 09:14:08
