--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: surveillance
 Title: Temporal and Spatio-Temporal Modeling and Monitoring of Epidemic
         Phenomena
-Version: 1.5-1
-Date: 2012-12-12
+Version: 1.5-2
+Date: 2013-03-15
 Author: M. Höhle, S. Meyer and M. Paul with contributions from T.
         Correa, L. Held, M. Hofmann, C. Lang, A. Riebler, D. Sabanés
-        Bové, S. Steiner, M. Virtanen, and V. Wimmer.  A few code
-        segments are modified versions of code by The R Core Team
+        Bové, M. Salmon, S. Steiner, M. Virtanen, and V. Wimmer.  A few
+        code segments are modified versions of code by The R Core Team
         (available under GPL-2).
 Depends: R (>= 2.14.0), grDevices, graphics, stats, utils, xtable,
         methods, Rcpp, sp
@@ -49,6 +49,7 @@ License: GPL-2
 URL: http://surveillance.r-forge.r-project.org/
 ZipData: no
 Encoding: latin1
-Packaged: 2012-12-13 21:20:55 UTC; hoehle
+Packaged: 2013-03-18 21:47:13 UTC; hoehle
+NeedsCompilation: yes
 Repository: CRAN
-Date/Publication: 2012-12-14 09:54:42
+Date/Publication: 2013-03-19 07:23:59
